--- a/HTML/index.html
+++ b/HTML/index.html
@@ -64,8 +64,8 @@
           </div>
             <div class="person">
               <div class="person-container">
-                <img src="..\icons\background.jpg" alt="" class="bg-img">
-                <img src ="..\icons\ramon.png" alt="Ramon Emmanuel N. Discion" class="home-img">
+                <img src="background.jpg" alt="" class="bg-img">
+                <img src ="ramon.png" alt="Ramon Emmanuel N. Discion" class="home-img">
             </div>
         </div>
       </section>
@@ -90,7 +90,7 @@
         <div class="about-img">
           <div class="img-box">
             <div class="img-item">
-              <img src="..\icons\profile pic.png" alt="Ramon Emmanuel Discion">
+              <img src="profile pic.png" alt="Ramon Emmanuel Discion">
             </div>
           </div>
         </div>
@@ -104,13 +104,13 @@
       </div>
       <div class="project-box">
         <div class="project-card">
-          <img src="..\icons\web portofolio.png" alt="web portfolio">
+          <img src="web portofolio.png" alt="web portfolio">
           <h2>Web Portfolio</h2>
           <p>A personal web portfolio built using HTML and CSS, showcasing projects, skills, and experiences in a clean and responsive layout.</p>
           <a href="https://nacretus.github.io/casestudy.io/" target="_blank">View</a>
         </div>
         <div class="project-card">
-          <img src="..\icons\EYE OB mock website.png" alt="EYE OB mock website">
+          <img src="EYE OB mock website.png" alt="EYE OB mock website">
           <h2>EYE OB WebProg Case Study Project</h2>
           <p>A mock-up company website for EYE OB, designed as a case study project. The site was developed using HTML and CSS to demonstrate responsive design and user-friendly layout.</p>
           <a href="https://nacretus.github.io/casestudy.io/" target="_blank">View</a>
