project 1 ref changes

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -107,7 +107,7 @@
           <img src="web portofolio.png" alt="web portfolio">
           <h2>Web Portfolio</h2>
           <p>A personal web portfolio built using HTML and CSS, showcasing projects, skills, and experiences in a clean and responsive layout.</p>
-          <a href="https://nacretus.github.io/casestudy.io/" target="_blank">View</a>
+          <a href="https://web-portfolio-vert-ten.vercel.app/" target="_blank">View</a>
         </div>
         <div class="project-card">
           <img src="EYE OB mock website.png" alt="EYE OB mock website">
